# autonomus_car_sim_base_ros2

./: CMakeLists.txt  README.md  package.xml
gazebo_models/models/dont_turn_left/: model.config  model.sdf
gazebo_models/models/dont_turn_right/: model.config  model.sdf
gazebo_models/models/dur/: model.config  model.sdf
gazebo_models/models/durak/: model.config  model.sdf
gazebo_models/models/forward_and_left/: model.config  model.sdf
gazebo_models/models/forward_and_right/: model.config  model.sdf
gazebo_models/models/girilmez/: model.config  model.sdf
gazebo_models/models/giris_yasak/: model.config  model.sdf
gazebo_models/models/iki_yonlu_yol/: model.config  model.sdf
gazebo_models/models/ileri_sag/: model.config  model.sdf
gazebo_models/models/ileri_sol/: model.config  model.sdf
gazebo_models/models/kavsak/: model.config  model.sdf
gazebo_models/models/mandotary_right/: model.config  model.sdf
gazebo_models/models/mandotory_left/: model.config  model.sdf
gazebo_models/models/no_entry/: model.config  model.sdf
gazebo_models/models/no_parking/: model.config  model.sdf
gazebo_models/models/park/: model.config  model.sdf
gazebo_models/models/park_edilmez/: model.config  model.sdf
gazebo_models/models/probhited_entry/: model.config  model.sdf
gazebo_models/models/robotaksi/: model.config  model.sdf
gazebo_models/models/robotaksi2/: model.config  model.sdf
gazebo_models/models/roundabout/: model.config  model.sdf
gazebo_models/models/saga_don/: model.config  model.sdf
gazebo_models/models/saga_donulmez/: model.config  model.sdf
gazebo_models/models/sola_don/: model.config  model.sdf
gazebo_models/models/sola_donulmez/: model.config  model.sdf
gazebo_models/models/stop/: model.config  model.sdf
gazebo_models/models/turn_left/: model.config  model.sdf
gazebo_models/models/turn_right/: model.config  model.sdf
gazebo_models/models/two_sided_way/: model.config  model.sdf
launch/: autonom_sim_base.launch.py
msg/: MekatronomYolo.msg
scripts/: gazebo_lane_tracking.py  gazebo_ride_car.py  gazebo_yolo.py
urdf/: merco.urdf  merco.xacro
worlds/: robotaksi2_new
yolov5/: README.md  birlestirme.yaml  custom.yaml  detect.py  detect_realsense.py  detect_video.py  object_mapping.py  pyrealsense_coklu_kamera.py  recognition_with_realsense.py  ros_recognition_yolo.py
yolov5/utils/: general.py
(+20 files in other folders)
